# fledx-core

./: .env.agent.example  .env.cli.example  .env.cp.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  audit.toml  deny.toml  justfile
.github/workflows/: ci.yml  codeql.yml  nightly.yml  release.yml  rust-job.yml  security-audit.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: bootstrap_spec.rs  lib.rs  parse.rs  profile_store.rs  test_support.rs  validate.rs  version.rs
crates/cli/src/api/: mod.rs  session.rs
crates/cli/src/args/: bootstrap.rs  common.rs  deploy.rs  internal.rs  metrics.rs  mod.rs  nodes.rs  profiles.rs  status.rs  usage.rs
crates/cli/src/bootstrap/: mod.rs
crates/cli/src/commands/: bootstrap.rs  completions.rs  configs.rs  deploy.rs  internal.rs  metrics.rs  mod.rs  nodes.rs  profiles.rs  status.rs  usage.rs
crates/cli/src/view/: deployments.rs  format.rs  logs.rs  metrics.rs  mod.rs  nodes.rs  status.rs  table.rs  usage.rs
crates/cli/src/watch/: mod.rs
crates/cli/tests/: config_attach.rs  config_create.rs  config_display.rs  config_list.rs  config_validation.rs  version.rs
crates/common/: Cargo.toml
crates/common/src/: api.rs  lib.rs
crates/control-plane/: Cargo.toml  build.rs
crates/control-plane/migrations/: 0001_init.sql  0002_instance_statuses.sql  0003_deployment_lifecycle.sql  0004_node_inventory_and_constraints.sql  0005_port_reservations.sql  0006_tokens.sql  0007_deployment_secrets.sql  0009_deployment_replicas_and_placement.sql  0010_deployment_assignments.sql  0011_port_reservations_per_node.sql  0012_instance_status_replica_identity.sql  0013_deployment_volumes.sql  0014_instance_status_endpoints.sql  0015_health_checks.sql  0016_instance_metrics.sql  0017_usage_rollups.sql  0018_configs.sql  0019_nodes_public_ip.sql  0020_public_ip_flag.sql  0021_tunnel_backends.sql
crates/control-plane/src/: app_state.rs  audit.rs  auth.rs  compat.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  openapi.rs  rate_limit.rs  rbac.rs  routes.rs  scheduler.rs  telemetry.rs  tokens.rs  tunnel.rs  validation.rs
crates/control-plane/src/http/: agents.rs  auth.rs  deployments.rs  error_mapper.rs  metrics.rs  mod.rs  nodes.rs  relay.rs  system.rs
crates/control-plane/src/persistence/: configs.rs  deployments.rs  logs.rs  migrations.rs  mod.rs  nodes.rs  ports.rs  tokens.rs  usage.rs
crates/control-plane/src/services/: compatibility.rs  deployments.rs  mod.rs  nodes.rs  test_support.rs  tokens.rs  tunnel.rs
crates/control-plane/src/tasks/: mod.rs  reachability.rs  retention.rs
crates/control-plane/tests/: api.rs  cli.rs  services_tokens.rs  standalone.rs
crates/control-plane/tests/support/: common.rs
crates/installer/: Cargo.toml
crates/installer/src/: bootstrap.rs
crates/installer/src/bootstrap/: archive.rs  github.rs  ssh.rs  systemd.rs  tokens.rs
crates/installer/tests/: bootstrap_public_api.rs
crates/node-agent/: Cargo.toml
crates/node-agent/src/: api.rs  compat.rs  config.rs  configs.rs  cp_client.rs  health.rs  heartbeat.rs  lib.rs  main.rs  runner.rs  sampler.rs  state.rs  telemetry.rs  test_support.rs  validation.rs
crates/node-agent/src/reconcile/: adoption.rs  apply.rs  backoff.rs  cleanup.rs  config_apply.rs  desired_fetch.rs  mod.rs  spec.rs
crates/node-agent/src/runtime/: docker.rs  helpers.rs  mod.rs
crates/node-agent/src/services/: gateway.rs  health.rs  heartbeat.rs  identities.rs  mod.rs  reconcile.rs  tunnel.rs
crates/node-agent/tests/: chaos_recovery.rs  container_runtime.rs  health_loop.rs  heartbeat_loop.rs  mtls_mesh.rs  reconcile_loop.rs  runner_shutdown.rs
docs/: architecture.md  faq.md  index.md  openapi.json  overview.md
docs/getting-started/: first-deployment.md  index.md  requirements.md
docs/guides/: architecture-examples.md  configuration.md  deployment.md  installation.md  migration.md  monitoring.md  security.md  troubleshooting.md  upgrades.md  yaml-deployments.md
docs/reference/: api.md  cli.md  tunnel-protocol.md  ui.md
docs/releases/: index.md
scripts/: install-fledx-cli.sh  quickstart.sh
tests/e2e/bootstrap/: .dockerignore  Dockerfile.cli-runner  Dockerfile.systemd-ssh  README.md  bootstrap.sh  run.sh
