[workspace]
resolver = "2"
members = [
    "crates/control-plane",
    "crates/node-agent",
    "crates/cli",
    "crates/common",
    "crates/installer",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "2.0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
axum = { version = "0.8", features = ["macros", "json", "http1", "http2", "tokio"] }
tokio = { version = "1", features = ["full", "test-util"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "uuid", "chrono", "migrate", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
bollard = { version = "0.19", features = ["ssl"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
hdrhistogram = "7"
tower-http = { version = "0.6", features = ["trace", "limit", "request-id"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.9.2"
sha2 = "0.10"
tower = "0.5"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
argon2 = { version = "0.5", features = ["std"] }
subtle = "2"
async-trait = "0.1"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
utoipa = { version = "5.4.0", features = ["chrono", "uuid", "preserve_order"] }
semver = "1"
tonic = { version = "0.14.2", features = ["transport"] }
prost = "0.14.1"
prost-build = "0.14.1"
prost-types = "0.14.1"
tokio-stream = "0.1"
futures-util = "0.3"
tempfile = "3.10"
bytes = "1"
base64 = "0.22.1"
http = "1.4.0"
h2 = "0.4.12"
rustls = { version = "0.23.35", features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "1.0.4"
