[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Command-line interface for managing distributed edge container deployments"
repository = "https://github.com/fledx/fledx-core"
homepage = "https://github.com/fledx/fledx-core"
authors = ["Thomas Schmitz <dev@tschmitz.de>"]
keywords = ["edge-computing", "containers", "cli", "docker", "tui"]
categories = ["command-line-utilities"]
build = "build.rs"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "fledx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete = "4"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
uuid.workspace = true
common = { path = "../common" }
chrono.workspace = true
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"

[build-dependencies]
chrono.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
semver.workspace = true
tempfile = "3.10"
