[package]
name = "common"
version = "0.5.0-dev"
edition = "2024"
publish = false
license = "BUSL-1.1"
description = "Shared types and DTOs for fledx-core distributed edge hosting platform"
repository = "https://github.com/fledx/fledx-core"
homepage = "https://github.com/fledx/fledx-core"
authors = ["Thomas Schmitz <dev@tschmitz.de>"]
keywords = ["edge-computing", "containers", "types"]
categories = ["data-structures"]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
utoipa.workspace = true
