[package]
name = "node-agent"
version = "0.2.0-dev"
edition = "2021"
license = "BUSL-1.1"
description = "Lightweight edge node agent for managing Docker containers in distributed deployments"
repository = "https://github.com/fledx/fledx-core"
homepage = "https://github.com/fledx/fledx-core"
authors = ["Thomas Schmitz <dev@tschmitz.de>"]
keywords = ["edge-computing", "containers", "docker", "agent", "distributed"]
categories = ["command-line-utilities", "network-programming"]
build = "build.rs"

[[bin]]
name = "fledx-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
bollard.workspace = true
uuid.workspace = true
config.workspace = true
chrono.workspace = true
common = { path = "../common" }
rand.workspace = true
async-trait.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
axum.workspace = true
semver.workspace = true
sha2.workspace = true
tempfile.workspace = true
bytes.workspace = true
base64.workspace = true
http.workspace = true
h2.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
httpmock = "0.8.2"
rcgen = "0.12"

[build-dependencies]
chrono.workspace = true
